--- a/notebooks/sidekick-mixture.ipynb
+++ b/notebooks/sidekick-mixture.ipynb
@@ -4,13 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sidekick - Mixture of Gaussian Processes: An Other Approach\n",
+    "# Sidekick - Mixture of Gaussian Processes\n",
     "\n",
     "### Single-Project Regression\n",
     "#### Model\n",
     "We are approaching the problem as time series regression, considering only one project. Our dataset $\\mathcal{D} = \\left\\{ (x_i, y_i) \\mid i = 1, ..., n \\right\\}$ consists of $N$ observations, with $x_i$ the time index of the amount of money $y_i$. Hence, we have $X = [1, ..., N]^T$ an $(Nx1)$ matrix of time indices and $\\mathbf{y} = [y_1, ..., y_N]^T$ and vector of observed values. We model the pledged money $f(\\mathbf{x})$ at time indices $\\mathbf{x}$ as a Gaussian Process:\n",
     "\n",
-    "$$f(\\mathbf{x}) \\sim GP \\left( m(\\mathbf{x}), k(\\mathbf{x}, \\mathbf{x'}) \\right). $$\n",
+    "$$f(\\mathbf{x}) \\sim GP \\left( m(\\mathbf{x}), k(\\mathbf{x}, \\mathbf{x}') \\right). $$\n",
     "\n",
     "Our goal is to predict the future values of the pledged money $\\mathbf{f}_* = \\mathbf{f}_{t:N} = f(X_{t:N})$ at future time indices $X_* = X_{t:N} = [t, ..., N]^T$ after observing the values $\\mathbf{y} = \\mathbf{y}_{1:t} = [y_1, ..., y_t]^T$ at time indices $X = X_{1:t} = [1, ..., t]$. In the GP framework, we can compute this prediction using\n",
     "\n",
