--- a/notebooks/sidekick-multi-project-regression.ipynb
+++ b/notebooks/sidekick-multi-project-regression.ipynb
@@ -124,6 +124,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1]\n",
+      " [2]]\n",
+      "[[   8.   27.]\n",
+      " [  27.  125.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "k = GPy.kern.Poly(input_dim=1)\n",
+    "X = np.ndarray(shape=(2, 1), buffer=np.arange(2) + 1, dtype=int)\n",
+    "print X\n",
+    "print k.K(X, X)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {
     "collapsed": false
