Finished input as output, EDA notebook and cleaning.

--- a/notebooks/sidekick-0-formal-definition.ipynb
+++ b/notebooks/sidekick-0-formal-definition.ipynb
@@ -77,6 +77,11 @@
     "\\text{cov}(f_*) = K(X_*, X_*) - K(X_*, X)\\left[ K(X, X) + \\sigma_n^2I \\right]^{-1}K(X, X_*).\n",
     "$$ \n",
     "\n",
+    "#### Results\n",
+    "As seen in [this plot](http://localhost:8888/notebooks/notebooks/sidekick-1-eda.ipynb#Output-as-input---Global), it seems impossible to do a regression considering all the projects together. However, the two modes corresponding to the successful and failed projects are clearly distinguisable, implying that a mixture of (GP) models can probably be used.\n",
+    "\n",
+    "### Mixture of Gaussian Processes\n",
+    "#### Model\n",
     "#### Results"
    ]
   },
