Added definition of problems.

--- a/notebooks/sidekick-0-formal-definition.ipynb
+++ b/notebooks/sidekick-0-formal-definition.ipynb
@@ -58,7 +58,7 @@
     "\n",
     "where $\\mathbf{y}_s$ and $\\mathbf{y}_f$ denote the observations of the successful and failed projects respectively. We then determine the success state $c^{(p)}$ of a new project $p$ with partial observations $\\mathbf{y}_{1:t}^{(p)}$ as\n",
     "\n",
-    "$$c_*^{(p)} = \n",
+    "$$c^{(p)} = \n",
     "\\begin{cases}\n",
     "    1, & \\text{ if } \\log p(\\mathbf{y}_{1:t}^{(p)} \\mid X_{1:t}, \\theta_s) > \\log p(\\mathbf{y}_{1:t}^{(p)} \\mid X_{1:t}, \\theta_f) \\\\\n",
     "    0, & \\text{ otherwise }\n",
@@ -135,8 +135,8 @@
     "\n",
     "def k(xp, xq , l, sigma_f):\n",
     "    \"\"\"Covariance functions with squared exponential of length-scale l and signal noise sigma_f.\"\"\"\n",
-    "    #return sigma_f * np.exp(-0.5 * (xp - xq)**2 / float(l**2))\n",
-    "    return sigma_f * xp * xq\n",
+    "    return sigma_f * np.exp(-0.5 * (xp - xq)**2 / float(l**2))\n",
+    "    #return sigma_f * xp * xq\n",
     "\n",
     "\n",
     "def K(x1, x2, l=1.0, sigma_f=1.0):\n",
