--- a/notebooks/sidekick-2-project-regression.ipynb
+++ b/notebooks/sidekick-2-project-regression.ipynb
@@ -5,7 +5,28 @@
    "metadata": {},
    "source": [
     "# Sidekick - Project-Based Predictions\n",
-    "Perform predictions on single projects."
+    "\n",
+    "#### Model\n",
+    "We are approaching the problem as time series regression, considering only one project. Our dataset $\\mathcal{D} = \\left\\{ (x_i, y_i) \\mid i = 1, ..., T \\right\\}$ consists of $T$ observations, with $x_i$ the time index of the amount of money $y_i$. Hence, we have $X = [1, ..., T]^T$ a $(T \\times 1)$ matrix of time indices and $\\mathbf{y} = [y_1, ..., y_T]^T$ a vector of observed values. We model the pledged money $f(\\mathbf{x})$ at time indices $\\mathbf{x}$ as a Gaussian Process:\n",
+    "\n",
+    "$$f(\\mathbf{x}) \\sim GP \\left( m(\\mathbf{x}), k(\\mathbf{x}, \\mathbf{x}') \\right). $$\n",
+    "\n",
+    "Our goal is to predict the future values of the pledged money $\\mathbf{f}_* = \\mathbf{f}_{t:T} = f(X_{t:T})$ at future time indices $X_* = X_{t:T} = [t, ..., T]^T$ after observing the values $\\mathbf{y} = \\mathbf{y}_{1:t} = [y_1, ..., y_t]^T$ at time indices $X = X_{1:t} = [1, ..., t]^T$. In the GP framework, we can compute this prediction using\n",
+    "\n",
+    "$$\\mathbf{f}_* \\mid X, \\mathbf{y}, X_* \\sim \\mathcal{N}\\left(\\overline{\\mathbf{f}}_*, \\text{ cov}(\\mathbf{f}_*)  \\right) \\\\\n",
+    "\\overline{\\mathbf{f}}_* = K(X_*, X) \\left[ K(X, X) + \\sigma_n^2I \\right]^{-1}\\mathbf{y} \\\\\n",
+    "\\text{cov}(\\mathbf{f}_*) = K(X_*, X_*) - K(X_*, X)\\left[ K(X, X) + \\sigma_n^2I \\right]^{-1}K(X, X_*).\n",
+    "$$ \n",
+    "\n",
+    "Finally, the kernel's (hyper)parameters $\\theta_*$ are learned by maximizing the *log marginal likehood*\n",
+    "\n",
+    "$$\\theta_* = \\underset{\\theta} {\\arg\\max} \\log p(\\mathbf{y} \\mid X, \\theta) = \\underset{\\theta} {\\arg\\max} \\left\\{ -\\frac{1}{2}\\mathbf{y}^T \\left[ K+ \\sigma_n^2I \\right]^{-1}\\mathbf{y} -\\frac{1}{2}\\log det\\left[K+ \\sigma_n^2I\\right] -\\frac{T}{2}\\log 2\\pi \\right\\},$$\n",
+    "\n",
+    "with $K = K(X, X)$.\n",
+    "\n",
+    "#### Results\n",
+    "The major problem in this context was that the predictive mean $\\mathbf{f}_*$ always falls back to the mean $m(\\mathbf{x})$ very quickly. One solution has been to combine two squared-exponential kernels and initializing one of them to a large length-scale in order to capture the global trend. This yields to some reasonable result. However, when applying the same model to another ones ($\\theta$ learned over one project and used to predict another) gives very poor performance.\n",
+    "\n"
    ]
   },
   {
@@ -314,7 +335,7 @@
     "#m.optimize_restarts(num_restarts=10)\n",
     "\n",
     "display(m)\n",
-    "m.plot()"
+    "fig = m.plot()"
    ]
   },
   {
