--- a/notebooks/sidekick-3-multi-project-regression.ipynb
+++ b/notebooks/sidekick-3-multi-project-regression.ipynb
@@ -5,7 +5,19 @@
    "metadata": {},
    "source": [
     "# Sidekick - Multi-Pojects Predictions\n",
-    "Scratch work to perform predictions for a project by considering multiple projects."
+    "\n",
+    "#### Model\n",
+    "Hence, our next idea is to consider $P$ projects at the same time and try to learn the hyperparameters $\\theta$ over various time series. For a given project $p$, we have the following dataset $\\mathcal{D}^{(p)} = \\left\\{ (x_i^{(p)}, y_i^{(p)}) \\mid i = 1, ..., T \\right\\}$. Note that we have $x_i^{(p)}= x_i = i$. We combine the projects together to obtain a new dataset $\\mathcal{D} = \\left\\{ \\mathcal{D}^{(p)} \\mid p = 1, ..., P \\right\\}$ (*multi-task learning*). We then have $X = [1, ..., T]^T$ an $(T \\times 1)$ matrix of time indices and $Y = \\left[\\mathbf{y}^{(p)} \\right]_{p=1}^P$ an $(T \\times P)$ matrix of observed values per project. For a given project $p$, we are trying to predict the pledged money $\\mathbf{f}_*  \\equiv \\mathbf{f}_*^{(p)} = \\mathbf{f}_{t:T}^{(p)} = f(X_{t:T}^{(p)})$ at future time indices $X_*  \\equiv X_*^{(p)} = X_{t:T}^{(p)} = X_{t:T} = [t,...,T]^T$ after observing the values $\\mathbf{y}  \\equiv \\mathbf{y}^{(p)} = \\mathbf{y}_{1:t}^{(p)}$ at time indices $X  \\equiv X_{1:t} = [1, ..., t]^T$. To do so in the GP framework, we have\n",
+    "\n",
+    "$$\\mathbf{f}_* \\mid X, \\mathbf{y}, X_* \\equiv \\mathbf{f}_{t:T}^{(p)} \\mid X_{1:t}, \\mathbf{y}_{1:t}^{(p)}, X_{t:T} \\sim \\mathcal{N} \\left( \\overline{\\mathbf{f}}_{t:T}^{(p)}, \\text{ cov}(\\mathbf{f}_{t:T}^{(p)}) \\right), $$\n",
+    "\n",
+    "with $\\overline{\\mathbf{f}}_{t:T}^{(p)} \\equiv \\overline{\\mathbf{f}}_*$ as before and $\\text{ cov}(\\mathbf{f}_{t:T}^{(p)}) \\equiv \\text{ cov}(\\mathbf{f}_*)$. The hyperparameters $\\mathbf{\\theta}$ of the GP are learned by maximizing the log marginal likelihood over all the projects, that is\n",
+    "\n",
+    "$$\\theta_* = \\underset{\\theta} {\\arg\\max} \\sum_{p=1}^P \\log p(\\mathbf{y}^{(p)} \\mid X, \\theta).$$\n",
+    "\n",
+    "#### Results\n",
+    "Again, we couldn't obtain good results with this approach, as the predictions always fall back very quickly to the mean of the GP. **[MORE DETAILS]**\n",
+    "\n"
    ]
   },
   {
