--- a/notebooks/sidekick-4-classification.ipynb
+++ b/notebooks/sidekick-4-classification.ipynb
@@ -26,11 +26,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "warning in stationary: failed to import cython module: falling back to numpy\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "import os\n",
@@ -63,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
